--- a/_includes/about-mana-and-ltm.html
+++ b/_includes/about-mana-and-ltm.html
@@ -1,6 +1,6 @@
-<section class="grid md:grid-cols-3 p-5p">
-    <div class="bg-image-style mr-10p" style="background-image: url('{{page.about.featured_image}}')"></div>
-    <div class="md:col-span-2">
+<section class="grid md:grid-cols-3 md:p-5p">
+    <div class="bg-image-style md:mr-10p min-h-[60vh]" style="background-image: url('{{page.about.featured_image}}'); background-position: bottom"></div>
+    <div class="md:col-span-2 p-5p md:p-0">
         <h2 class="text-md-serif text-feature capitalize">{{page.about.heading}}</h2>
         <p>{{page.about.description_html}}</p>
     </div>
