--- a/_includes/investment-ltm.html
+++ b/_includes/investment-ltm.html
@@ -6,7 +6,7 @@
             <h3 class="uppercase text-2xl">{{page.investment.includes.heading}}</h3>
             <ul>
                 {% for item in page.investment.includes.list %}
-                <li class="list-none sm:list-disc sm:ml-4">{{item.list-item}}</li>
+                <li class="list-disc ml-4 mb-2">{{item.list-item}}</li>
                 {% endfor %}
             </ul>
         </div>
