--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -1016,6 +1016,12 @@ p {
 .min-h-\[90vh\] {
   min-height: 90vh;
 }
+.min-h-\[40vh\] {
+  min-height: 40vh;
+}
+.min-h-\[50vh\] {
+  min-height: 50vh;
+}
 .w-\[10vh\] {
   width: 10vh;
 }
@@ -1036,6 +1042,9 @@ p {
 }
 .list-none {
   list-style-type: none;
+}
+.list-disc {
+  list-style-type: disc;
 }
 .grid-cols-1 {
   grid-template-columns: repeat(1, minmax(0, 1fr));
@@ -1332,6 +1341,9 @@ p {
   .md\:mt-0 {
     margin-top: 0px;
   }
+  .md\:mr-10p {
+    margin-right: 10%;
+  }
   .md\:block {
     display: block;
   }
@@ -1373,6 +1385,9 @@ p {
   }
   .md\:p-5p {
     padding: 5%;
+  }
+  .md\:p-0 {
+    padding: 0px;
   }
   .md\:px-10p {
     padding-left: 10%;
