--- a/_includes/about-mana-and-ltm.html
+++ b/_includes/about-mana-and-ltm.html
@@ -1,7 +1,13 @@
 <section class="grid md:grid-cols-3 md:p-5p">
-    <div class="bg-image-style md:mr-10p min-h-[60vh]" style="background-image: url('{{page.about.featured_image}}'); background-position: bottom"></div>
-    <div class="md:col-span-2 p-5p md:p-0">
+    <!-- Image -->
+    <div class="bg-image-style md:mr-10p" style="background-image: url('{{page.about.featured_image}}'); background-position: bottom"></div>
+
+    <!-- Text -->
+    <div class="md:col-span-2 p-5p md:p-0 mt-10p md:mt-0 border-t border-feature md:border-none">
         <h2 class="text-md-serif text-feature capitalize">{{page.about.heading}}</h2>
-        <p>{{page.about.description_html}}</p>
+        <div id="aboutDescription" class="description-container overflow-hidden">
+            <p class="description-content">{{page.about.description_html}}</p>
+        </div>
+        <button id="readMoreBtn" class="read-more-btn button mt-8">Read More</button>
     </div>
 </section>
