added description course grid

--- a/_includes/description-course-grid.html
+++ b/_includes/description-course-grid.html
@@ -1,7 +1,12 @@
 <section class="pt-10p p-5p md:p-10p">
-    <div class="text-center mb-12">
-        <h2 class="heading-lg-sans text-feature">{{page.course-description.heading}}</h2>
-        <p>{{page.course-description.description_html}}</p>
+    <h2 class="heading-lg-sans text-feature text-center">{{page.course-description.heading}}</h2>
+    <div class="grid grid-cols-2">
+        <div>
+            <p>{{page.course-description.description_html}}</p>
+        </div>
+        <div class="p-10p border border-feature">
+            <p>{{page.course-description.benefits_html}}</p>
+        </div>
     </div>
     {% for item in page.course-description.module %}
     <div class="flex mb-12">
