--- a/_includes/description-course-grid.html
+++ b/_includes/description-course-grid.html
@@ -1,4 +1,4 @@
-<section class="pt-10p p-5p md:p-10p border border-red-600">
+<section class="pt-10p p-5p md:p-10p">
     <h2 class="heading-lg-sans text-feature text-center">{{page.course-description.heading}}</h2>
     <div class="grid grid-cols-2">
         <div>
