--- a/_includes/description-course.html
+++ b/_includes/description-course.html
@@ -1,4 +1,4 @@
-<section class="pt-10p p-5p md:p-10p">
+<section class="section-padding">
     <div class="text-center mb-12">
         <h2 class="heading-lg-sans text-feature">{{page.course-description.heading}}</h2>
         <p>{{page.course-description.description_html}}</p>
