--- a/_includes/investment.html
+++ b/_includes/investment.html
@@ -27,6 +27,6 @@
 
     <!-- CTA -->
     <div class="flex justify-center mt-8">
-        <a href="#" class="button">Enroll Now</a>
+        <a href="{{page.investment.button.url}}" class="button">{{page.investment.button.text}}</a>
     </div>
 </section>
