--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -1142,6 +1142,12 @@ p {
 .bg-\[url\(\'\{\{page\.testimonials\.background_image\}\}\'\)\] {
   background-image: url('{{page.testimonials.background_image}}');
 }
+.bg-\[url\(\'\'\)\] {
+  background-image: url('');
+}
+.bg-\[url\(\'\/uploads\/images\/manamei-11\.jpg\'\)\] {
+  background-image: url('/uploads/images/manamei-11.jpg');
+}
 .bg-fixed {
   background-attachment: fixed;
 }
