--- a/_includes/social-share.html
+++ b/_includes/social-share.html
@@ -1,7 +1,7 @@
 <div class="social-share fixed top-[50%] left-0 bg-dark/50 border-t border-r border-b border-feature p-2">
 
     <nav class="text-white">
-        <a class="block py-4 px-2 hover:text-feature" href="https://facebook.com/sharer.php?u={{ site.url }}{{ page.url }}" rel="nofollow" target="_blank" title="Share on Facebook">
+        <a class="block py-4 px-2 hover:text-feature" href="https://www.facebook.com/sharer/sharer.php?u={{ site.url }}{{ page.url }}" rel="nofollow" target="_blank" title="Share on Facebook">
             <img src="/uploads/icons/manamei-23.png" class="h-[1.5rem]">
         </a>
         <a class="block py-4 px-2 hover:text-feature" href="https://www.instagram.com/?url={{ site.url }}{{ page.url }}" rel="nofollow" target="_blank" title="Share on Instagram">
