--- a/_includes/form-ebook.html
+++ b/_includes/form-ebook.html
@@ -1,17 +1,17 @@
 <!-- Ebook -->
 <form>
     <div class="grid md:grid-cols-7 gap-2">
-        <div class="my-2 md:my-0 md:col-span-2">
+        <div class="md:col-span-2">
             <input type="text" id="first-name" name="first-name" placeholder=" First Name"
                 class="bg-transparent border border-white w-full">
         </div>
 
-        <div class="my-2 md:my-0 md:col-span-2">
+        <div class="md:col-span-2">
             <input type="text" id="last-name" name="last-name" placeholder=" Last Name"
                 class="bg-transparent border border-white w-full">
         </div>
 
-        <div class="my-2 md:my-0 md:col-span-2">
+        <div class="md:col-span-2">
             <input type="email" id="email" name="email" placeholder=" Email"
                 class="bg-transparent border border-white w-full">
         </div>
