--- a/style.css
+++ b/style.css
@@ -217,11 +217,20 @@
         left: 0;
         bottom: 0;
         right: 0;
-        background-color: rgba(0, 0, 0, 0.7);
     }
 
     .bg-overlay>* {
         position: relative;
+    }
+
+    .bg-overlay.dark::before {
+        background-color: rgba(0, 0, 0, 0.7);
+
+    }
+
+    .bg-overlay.light::before {
+        background-color: rgba(0, 0, 0, 0.3);
+
     }
 
     .icon {
