--- a/_includes/hero-banner-course.html
+++ b/_includes/hero-banner-course.html
@@ -1,4 +1,4 @@
-<section class="p-10p bg-image-style bg-overlay min-h-[90vh] flex align-middle items-center text-center justify-center" style="background-image: url('{{page.heading.background_image}}')">
+<section class="p-10p bg-image-style bg-overlay min-h-[90vh] flex align-middle items-center text-center justify-center {{page.heading.overlay_style}}" style="background-image: url('{{page.heading.background_image}}')">
     <div>
         <h2 class="heading-lg-sans">{{page.heading.title}}</h2>
         <h3 class="text-lg-serif">{{page.heading.subtitle}}</h3>
