--- a/_includes/description-course-grid.html
+++ b/_includes/description-course-grid.html
@@ -1,22 +1,13 @@
 <section class="pt-10p p-5p md:p-10p">
     <h2 class="heading-lg-sans text-feature text-center">{{page.course-description.heading}}</h2>
-    <div class="grid grid-cols-2">
+    <div class="grid grid-cols-2 gap-8">
         <div class="col-span-1">
             <p class="text-left">{{page.course-description.description_html}}</p>
         </div>
-        <div class="col-span-1 p-10p border border-feature">
-            <p class="text-left">{{page.course-description.benefits_html}}</p>
-        </div>
-    </div>
-    {% for item in page.course-description.module %}
-    <div class="flex mb-12">
-        <img src="{{item.image_path}}" class="h-16 mr-4">
-        <div class="col-span-4">
-            <h3 class="text-md-serif text-feature">{{item.title}}</h3>
-            <div>
-                <p>{{item.description_html}}</p>
+        <div>
+            <div class="col-span-1 p-10p border border-feature">
+                <p class="text-left">{{page.course-description.benefits_html}}</p>
             </div>
         </div>
     </div>
-    {% endfor %}
 </section>
