--- a/_includes/cta-course.html
+++ b/_includes/cta-course.html
@@ -1,4 +1,4 @@
-<section class="section-padding bg-image-style bg-overlay"
+<section class="section-padding bg-image-style bg-overlay {{page.cta.background-image.overlay_style}}"
     style="background-image: url('{{page.cta.background-image.background_image}}'); background-position: {{page.cta.background-image.image_focus}};">
     <div class="text-center">
         <h2 class="text-lg-serif">{{page.cta.heading}}</h2>
