--- a/_includes/investment.html
+++ b/_includes/investment.html
@@ -1,4 +1,4 @@
-<section class="bg-image-style bg-overlay py-10p px-5p md:p-10p" style="background-image: url('/uploads/backgrounds/manamei-1.png');">
+<section class="bg-image-style bg-overlay py-10p px-5p md:p-10p {{page.investment.overlay_style}}" style="background-image: url('{{page.investment.background_image}}');">
     <h2 class="heading-lg-sans text-feature text-center">{{page.investment.heading}}</h2>
     <div class="grid sm:grid-cols-3 sm:gap-8">
         <!-- Includes -->
