--- a/_includes/description-course-grid.html
+++ b/_includes/description-course-grid.html
@@ -1,6 +1,6 @@
 <section class="pt-10p p-5p md:p-10p">
     <h2 class="heading-lg-sans text-feature text-center">{{page.course-description.heading}}</h2>
-    <div class="grid grid-cols-2 gap-8">
+    <div class="grid md:grid-cols-2 gap-8">
         <div class="col-span-1">
             <p class="text-left">{{page.course-description.description_html}}</p>
         </div>
