--- a/_includes/about-ltm.html
+++ b/_includes/about-ltm.html
@@ -1,4 +1,4 @@
-<section class="bg-image-style py-10p px-5p md:p-10p text-center bg-overlay" style="background-image: url('{{page.about-ltm.background_image}}');">
+<section class="bg-image-style py-10p px-5p md:p-10p text-center bg-overlay {{page.about-ltm.overlay_style}}" style="background-image: url('{{page.about-ltm.background_image}}');">
     <h2 class="heading-lg-sans">{{page.about-ltm.heading}}</h2>
     <div>
         <p>{{page.about-ltm.description_html}}</p>
