--- a/_includes/investment-ltm.html
+++ b/_includes/investment-ltm.html
@@ -1,4 +1,4 @@
-<section class="bg-image-style bg-overlay bg-fixed py-10p px-5p md:p-10p" style="background-image: url('{{page.investment.background_image}}');">
+<section class="bg-image-style bg-overlay {{page.investment.overlay_style}} bg-fixed py-10p px-5p md:p-10p" style="background-image: url('{{page.investment.background_image}}');">
     <h2 class="heading-lg-sans text-feature text-center">{{page.investment.heading}}</h2>
     <div class="grid md:grid-cols-3 md:gap-8">
         <!-- Includes -->
