--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -1184,6 +1184,12 @@ li:last-child {
 .bg-\[url\(\'\{\{page\.testimonials\.background_image\}\}\'\)\] {
   background-image: url('{{page.testimonials.background_image}}');
 }
+.bg-\[url\(\'\/uploads\/images\/manamei-18\.jpg\'\)\] {
+  background-image: url('/uploads/images/manamei-18.jpg');
+}
+.bg-\[url\(\'\'\)\] {
+  background-image: url('');
+}
 .bg-fixed {
   background-attachment: fixed;
 }
