--- a/_includes/video.html
+++ b/_includes/video.html
@@ -1,1 +1,1 @@
-<section class="min-h-[70vh]"></section>
+<iframe src="https://player.cloudinary.com/embed/?cloud_name=dnb4ey82d&public_id=manamei/clay">
