--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -600,7 +600,7 @@ li:last-child {
 }
 /* Buttons */
 .description-container {
-        max-height: 60vh; 
+        max-height: 60vh;
         transition: max-height 0.3s ease-out;
     }
 .read-more-btn {
@@ -802,6 +802,23 @@ li:last-child {
         width: 100%;
         height: 100%;
     }
+.bg-video {
+        width: 100%;
+        height: 100%;
+        -o-object-fit: cover;
+           object-fit: cover;
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        z-index: -1;
+    }
+.section-video {
+        position: relative;
+        height: 90vh;
+        overflow: hidden;
+    }
 /* Slick Container */
 /* Mobile Menu */
 .mobile-button {
@@ -942,10 +959,6 @@ li:last-child {
   margin-top: auto;
   margin-bottom: auto;
 }
-.my-12 {
-  margin-top: 3rem;
-  margin-bottom: 3rem;
-}
 .mb-10p {
   margin-bottom: 10%;
 }
@@ -1038,9 +1051,6 @@ li:last-child {
 }
 .min-h-\[60vh\] {
   min-height: 60vh;
-}
-.min-h-\[70vh\] {
-  min-height: 70vh;
 }
 .min-h-\[90vh\] {
   min-height: 90vh;
@@ -1169,6 +1179,9 @@ li:last-child {
 .bg-\[url\(\'\/uploads\/images\/manamei-11\.jpg\'\)\] {
   background-image: url('/uploads/images/manamei-11.jpg');
 }
+.bg-\[url\(\'\/uploads\/images\/manamei-18\.jpg\'\)\] {
+  background-image: url('/uploads/images/manamei-18.jpg');
+}
 .bg-\[url\(\'\/uploads\/images\/manamei-2\.jpg\'\)\] {
   background-image: url('/uploads/images/manamei-2.jpg');
 }
@@ -1183,12 +1196,6 @@ li:last-child {
 }
 .bg-\[url\(\'\{\{page\.testimonials\.background_image\}\}\'\)\] {
   background-image: url('{{page.testimonials.background_image}}');
-}
-.bg-\[url\(\'\/uploads\/images\/manamei-18\.jpg\'\)\] {
-  background-image: url('/uploads/images/manamei-18.jpg');
-}
-.bg-\[url\(\'\'\)\] {
-  background-image: url('');
 }
 .bg-fixed {
   background-attachment: fixed;
