--- a/style.css
+++ b/style.css
@@ -125,14 +125,14 @@
 
     /* Buttons */
     .description-container {
-        max-height: 60vh; 
+        max-height: 60vh;
         transition: max-height 0.3s ease-out;
     }
-    
+
     .read-more-btn {
         display: none;
     }
-    
+
 
     .button {
         text-transform: uppercase;
@@ -300,6 +300,24 @@
         left: 0;
         width: 100%;
         height: 100%;
+    }
+
+    .bg-video {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        z-index: -1;
+    }
+
+    .section-video {
+        position: relative;
+        height: 90vh;
+        overflow: hidden;
     }
 
     /* Slick Container */
