--- a/_includes/hero-banner-home.html
+++ b/_includes/hero-banner-home.html
@@ -12,7 +12,7 @@
 <section class="section-video">
     <video autoplay muted loop playsinline poster class="bg-video bg-overlay {{page.header.overlay_style}} min-h-[90vh]">
         <source src="/uploads/video/clay.webm" type="video/webm">
-        <source src="/uploads/video/clay-edited.mp4" type="video/mp4">
+        <source src="/uploads/video/clay.mp4" type="video/mp4">
         <p>Sorry, your browser doesn't support embedded videos</p> 
     </video>
     <div class="flex justify-center align-middle items-center p-5p md:p-10p text-center">
