--- a/_includes/optin-masterclass.html
+++ b/_includes/optin-masterclass.html
@@ -1,15 +1,7 @@
-<section class="bg-image-style">
-    <h2>Liberation Through Movement</h2>
-    <h3>Free Masterclass Replay</h3>
-    <p>This is the perfect resource for anyone interested to learn more about the HOW and WHY the Liberation Through
-        Movement Modality for Healing works.</p>P
-    <p>In this experiential movement Masterclass where you will be introduced to the Liberation Through Movement Model-
-        a 3-pillar process for taking the leap from feeling disconnected to arriving in life as a liberated and embodied
-        woman.</p>
-    <p>I cover in depth the elements needed for you to take the journey back home to your True Self and arrive in a more
-        satisfying experience of life, one in which you feel able to navigate the ups and downs of life from a place of
-        grounded presence and safety.</p>
-    <p>You will also have the opportunity to be guided through an LTM Movement process to experience it yourself!</p>
+<section class="bg-image-style bg-overlay {{page.cta.background.overlay_style}}">
+    <h2>{{page.cta.heading_html}}</h2>
+    <h3>{{page.cta.subtitle}}</h3>
+    <p>{{page.cta.description_html}}</p>
     <form>
         <div class="mb-4">
             <input type="text" id="first-name" name="first-name" class="block border-b border-white w-full">
