--- a/_includes/hero-banner-offerings.html
+++ b/_includes/hero-banner-offerings.html
@@ -1,26 +1,39 @@
-<section class="min-h-[90vh] text-center align-middle grid grid-cols-1 p-5p">
-    <h1>{{page.title}}</h1>
-    <div class="text-container">
-        <div class="text-item">
-            <p>Embody <span class="font-serif">Radical Self Acceptance</span> & Embrace all Aspects of your Self</p>
-        </div>
-        <div class="text-item">
-            <p>Create <span class="font-serif">Balance</span> in your life & establish an unwavering <span class="font-serif">Inner Anchor</span></p>
-        </div>
-        <div class="text-item">
-            <p>Heal your relationship with your <span class="font-serif">Emotions</span>, through acknowledgement & expression</p>
-        </div>
-        <div class="text-item">
-            <p>Feel supported in your journey by <span class="font-serif">Connecting</span> with women around the world</p>
-        </div>
-        <div class="text-item">
-            <p>Learn powerful <span class="font-serif">Embodiment Practices</span> & Life-changing Movement Tools</p>
-        </div>
-        <div class="text-item">
-            <p>Heal and Grow through the <span class="font-serif">Feminine Way</span> focusing on Pleasure & Creativity</p>
-        </div>
-        <div class="text-item">
-            <p>Take back your <span class="font-serif">Power</span>, Know your <span class="font-serif">Worth</span> Become the <span class="font-serif">Leader</span> of your life</p>
+<section class="section-video">
+    <video autoplay muted loop playsinline poster class="bg-video min-h-[90vh]">
+        <source src="/uploads/video/offerings.webm" type="video/webm">
+        <source src="/uploads/video/offerings.mp4" type="video/mp4">
+        <p>Sorry, your browser doesn't support embedded videos</p>
+    </video>
+    <div class="min-h-[90vh] text-center align-middle grid grid-cols-1 p-5p">
+        <h1>{{page.title}}</h1>
+        <div class="text-container">
+            <div class="text-item">
+                <p>Embody <span class="font-serif">Radical Self Acceptance</span> & Embrace all Aspects of your Self</p>
+            </div>
+            <div class="text-item">
+                <p>Create <span class="font-serif">Balance</span> in your life & establish an unwavering <span
+                        class="font-serif">Inner Anchor</span></p>
+            </div>
+            <div class="text-item">
+                <p>Heal your relationship with your <span class="font-serif">Emotions</span>, through acknowledgement &
+                    expression</p>
+            </div>
+            <div class="text-item">
+                <p>Feel supported in your journey by <span class="font-serif">Connecting</span> with women around the
+                    world</p>
+            </div>
+            <div class="text-item">
+                <p>Learn powerful <span class="font-serif">Embodiment Practices</span> & Life-changing Movement Tools
+                </p>
+            </div>
+            <div class="text-item">
+                <p>Heal and Grow through the <span class="font-serif">Feminine Way</span> focusing on Pleasure &
+                    Creativity</p>
+            </div>
+            <div class="text-item">
+                <p>Take back your <span class="font-serif">Power</span>, Know your <span class="font-serif">Worth</span>
+                    Become the <span class="font-serif">Leader</span> of your life</p>
+            </div>
         </div>
     </div>
 </section>
