--- a/_includes/hero-banner-offerings.html
+++ b/_includes/hero-banner-offerings.html
@@ -5,7 +5,7 @@
         <p>Sorry, your browser doesn't support embedded videos</p>
     </video>
     <div class="min-h-[90vh] text-center align-middle grid grid-cols-1 p-5p">
-        <h1>{{page.title}}</h1>
+        <h1 class="text-left">{{page.title}}</h1>
         <div class="text-container">
             <div class="text-item">
                 <p>Embody <span class="font-serif">Radical Self Acceptance</span> & Embrace all Aspects of your Self</p>
