--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,6 +30,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
     <!-- Lightgallery for pop-ups  -->
+    <!-- Lightgallery for pop-ups  -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lightgallery/2.1.8/lightgallery.min.js"></script>
 
     <!-- Javascript  -->
