--- a/_includes/gallery-mana.html
+++ b/_includes/gallery-mana.html
@@ -2,7 +2,7 @@
     {% for item in page.gallery %}
     <a href="{{item.image_path}}" src="{{item.seo-description}}"
         class="mx-2 w-[90%] sm:w-[60%] md:w-[40%] lg:w-[30%] xl:w-[20%] shrink-0 h-[65vh]">
-        <div class="bg-image-style w-full shrink-0 h-[65vh]" style="background-image: url('{{item.image_path}}');">
+        <div class="bg-image-style w-full shrink-0 h-[65vh]" style="background-image: url('{{item.image_path}}'); background-position: {{item.image_focus}}">
         </div>
         {% endfor %}
     </a>
