--- a/_includes/map.html
+++ b/_includes/map.html
@@ -6,8 +6,16 @@
         {% for item in page.map.offering %}
 
         <!-- icon -->
-        <div class=col-span-1>
-            <img src={{item.image_path}} class="h-16 sm:h-20 md:h-24">
+        <div class="col-span-1 px-2 text-center">
+            <img src="{{item.image_path}}" class="h-16 sm:h-20 md:h-24 bg-black z-20 inline-block">
+            {% if forloop.last %}
+            <!-- Omit the div structure for the last item -->
+            {% else %}
+            <div class="grid grid-cols-2 h-full">
+                <div class="border-r border-feature h-full"></div>
+                <div></div>
+            </div>
+            {% endif %}
         </div>
 
         <div class="col-span-4 mb-12 ml-2">
@@ -21,13 +29,16 @@
 </section>
 
 <!-- Medium Devices & Larger -->
-<section class="hidden md:block p-10p pb-0">
+<section class="hidden md:block md:p-5p lg:p-10p pb-0">
+    <h1>Practice Section</h1>
     <h2 class="text-md-serif text-feature text-center">{{page.map.heading}}</h2>
     <p class="text-center">{{page.map.description}}</p>
     <div class="grid grid-cols-12 mt-12">
         {% for item in page.map.offering %}
         {% capture thecycle %}{% cycle 'left', 'right' %}{% endcapture %}
         {% if thecycle == 'left' %}
+
+        <!-- Content Left -->
         <div class="col-span-5 mb-12 
         {% cycle 'text-right', 'text-left' %}">
             <h3 class="heading-md-sans text-feature">{{item.title}}</h3>
@@ -36,17 +47,37 @@
             <a href="{{item.url}}" class="link">Learn more</a>
         </div>
 
-        <!-- icon -->
-        <div class="col-span-2 px-2 flex justify-center">
-            <img src={{item.image_path}} class="h-28">
+        <div class="col-span-2 px-2 text-center">
+            <img src="{{item.image_path}}" class="h-28 bg-black z-20 inline-block">
+            {% if forloop.last %}
+            <!-- Omit the div structure for the last item -->
+            {% else %}
+            <div class="grid grid-cols-2 h-full">
+                <div class="border-r border-feature h-full"></div>
+                <div></div>
+            </div>
+            {% endif %}
         </div>
 
         <div class="col-span-5"></div>
         {% else %}
+
+        <!-- Content Right -->
         <div class="col-span-5"></div>
 
-        <div class="col-span-2 flex justify-center"><img src={{item.image_path}} class="h-28"></div>
-        <div class="col-span-5 p-5p 
+        <div class="col-span-2 px-2 text-center">
+            <img src="{{item.image_path}}" class="h-28 bg-black z-20 inline-block">
+            {% if forloop.last %}
+            <!-- Omit the div structure for the last item -->
+            {% else %}
+            <div class="grid grid-cols-2 h-full">
+                <div class="border-r border-feature h-full"></div>
+                <div></div>
+            </div>
+            {% endif %}
+        </div>
+
+        <div class="col-span-5 p-5p mb-12
         {% cycle 'text-right', 'text-left' %}">
             <h3 class="heading-md-sans text-feature">{{item.title}}</h3>
             <span class="lowercase text-feature">{{item.type}}</span>
@@ -55,4 +86,5 @@
         </div>
         {% endif %}
         {% endfor %}
+    </div>
 </section>
