--- a/_includes/hero-banner-offerings.html
+++ b/_includes/hero-banner-offerings.html
@@ -1,5 +1,5 @@
 <section class="section-video">
-    <video autoplay muted loop playsinline poster class="bg-video min-h-[90vh]">
+    <video autoplay muted loop playsinline poster="/uploads/video/offerings-thumbnail.jpg" class="bg-video min-h-[90vh]">
         <source src="/uploads/video/offerings.webm" type="video/webm">
         <source src="/uploads/video/offerings.mp4" type="video/mp4">
         <p>Sorry, your browser doesn't support embedded videos</p>
