--- a/_includes/map.html
+++ b/_includes/map.html
@@ -1,5 +1,5 @@
 <!-- Small Devices & Smaller -->
-<section class="md:hidden pt-10p p-5p">
+<section class="md:hidden pt-10p px-5p">
     <h2 class="text-md-serif text-feature text-center">{{page.map.heading}}</h2>
     <p class="text-center">{{page.map.description}}</p>
     <div class="grid grid-cols-5 mt-12">
@@ -29,8 +29,7 @@
 </section>
 
 <!-- Medium Devices & Larger -->
-<section class="hidden md:block md:p-5p lg:p-10p pb-0">
-    <h1>Practice Section</h1>
+<section class="hidden md:block md:px-5p lg:px-10p pt-10p">
     <h2 class="text-md-serif text-feature text-center">{{page.map.heading}}</h2>
     <p class="text-center">{{page.map.description}}</p>
     <div class="grid grid-cols-12 mt-12">
