--- a/_includes/additional-offerings.html
+++ b/_includes/additional-offerings.html
@@ -1,4 +1,4 @@
-<section class="py-10p px-5p md:p-10p border-t border-feature md:border-none">
+<section class="p-5p md:px-10p border-t border-feature md:border-none">
     <div class="text-center">
         <h2 class="heading-lg-sans">{{page.additional-offerings.heading}}</h2>
         <span class="text-md-serif text-feature block">{{page.additional-offerings.subheading}}</span>
