--- a/_includes/map.html
+++ b/_includes/map.html
@@ -12,7 +12,7 @@
             <!-- Omit the div structure for the last item -->
             {% else %}
             <div class="grid grid-cols-2 h-full">
-                <div class="border-r border-feature h-full"></div>
+                <div class="border-r-[0.5px] border-feature h-full"></div>
                 <div></div>
             </div>
             {% endif %}
