--- a/_includes/description-course.html
+++ b/_includes/description-course.html
@@ -1,5 +1,5 @@
-<section class="section-padding">
-    <div class="text-center mb-12">
+<section class="section-padding bg-image-style bg-overlay {{page.course-description.background-image.overlay_style}}" style="background-image: url('{{page.course-description.background-image.background_image}}'); background-position: {{page.course-description.background-image.image_focus}};">
+    <div class="text-center">
         <h2 class="heading-lg-sans text-feature">{{page.course-description.heading}}</h2>
         <p>{{page.course-description.description_html}}</p>
     </div>
