--- a/_includes/investment.html
+++ b/_includes/investment.html
@@ -1,4 +1,4 @@
-<section class="bg-image-style bg-overlay py-10p px-5p md:p-10p {{page.investment.overlay_style}}" style="background-image: url('{{page.investment.background_image}}');">
+<section class="section-padding bg-image-style bg-overlay {{page.investment.overlay_style}} {{page.investment.border}}" style="background-image: url('{{page.investment.background_image}}');">
     <h2 class="heading-lg-sans text-feature text-center">{{page.investment.heading}}</h2>
     <div class="grid sm:grid-cols-3 sm:gap-8">
         <!-- Includes -->
@@ -12,7 +12,7 @@
         </div>
         <!-- Pricing Options -->
         <div class="text-center sm:text-left">
-            <div class="mb-8">
+            <div class="mt-8 sm:mt-0 sm:mb-8">
                 <h3 class="uppercase text-2xl">{{page.investment.pricing.pay-in-full.heading}}</h3>
                 <span>{{page.investment.pricing.pay-in-full.price}}</span>
                 {% if page.investment.pricing.payment-plan.show == true %}
@@ -26,7 +26,7 @@
     </div>
 
     <!-- CTA -->
-    <div class="flex justify-center mt-8">
+    <div class="flex justify-center sm:justify-start mt-4">
         <a href="{{page.investment.button.url}}" class="button">{{page.investment.button.text}}</a>
     </div>
 </section>
