--- a/style.css
+++ b/style.css
@@ -141,7 +141,8 @@
         padding: 0.25rem 1.5rem;
         font-size: 1rem;
         letter-spacing: 0.1em;
-        display: inline-block
+        display: inline-block;
+        text-align: center;
     }
 
     .button:hover,
