--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -400,6 +400,9 @@ footer input::placeholder, textarea::placeholder {
 p {
   margin-bottom: 1rem;
 }
+p:last-child {
+  margin-bottom: 0px;
+}
 ul {
   margin-left: 1rem;
   list-style-type: disc;
@@ -1201,6 +1204,9 @@ li:last-child {
 .bg-\[url\(\'\{\{page\.testimonials\.background_image\}\}\'\)\] {
   background-image: url('{{page.testimonials.background_image}}');
 }
+.bg-\[url\(\'\'\)\] {
+  background-image: url('');
+}
 .bg-fixed {
   background-attachment: fixed;
 }
@@ -1301,6 +1307,9 @@ li:last-child {
 }
 .outline {
   outline-style: solid;
+}
+.filter {
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
 @font-face {
