--- a/_includes/testimonials.html
+++ b/_includes/testimonials.html
@@ -7,7 +7,7 @@
         {% for item in page.testimonials.testimonials %}
         <div class="testimonial-item">
             <p class="text-center"><em>"{{item.testimonial}}"</em></p>
-            <p class="text-right">— {{item.author}}</p>
+            <p class="text-right">{{item.author}}</p>
         </div>
         {% endfor %}
     </div>
