--- a/_includes/head.html
+++ b/_includes/head.html
@@ -41,6 +41,12 @@
     integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
+<!-- Magnific Popup core CSS file -->
+<!-- <link rel="stylesheet" href="/magnific-popup/magnific-popup.css"> -->
+
+<!-- Magnific Popup core JS file -->
+<!-- <script src="/magnific-popup/jquery.magnific-popup.js"></script> -->
+
 <!-- Slick -->
 <!--- Main CSS that handles all the functionality --->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.css"
