--- a/_includes/testimonials.html
+++ b/_includes/testimonials.html
@@ -1,5 +1,5 @@
 <section class="bg-image-style bg-overlay 
-{{ page.testimonials.overlay_style }} bg-[url('{{page.testimonials.background_image}}')] p-5p md:p-10p bg-overlay-light">
+{{ page.testimonials.overlay_style }} bg-[url('{{page.testimonials.background_image}}')] p-5p md:p-10p bg-overlay-light {{page.testimonials.border}}">
     <div class="icon">
         <img src="/uploads/icons/manamei-17.png" class="h-12">
     </div>
