--- a/_includes/site-header.html
+++ b/_includes/site-header.html
@@ -1,6 +1,8 @@
 <header class="flex justify-between items-center px-[5%]">
-    <img src="/uploads/icons/manamei-11.png" alt="Mana Mei">
-    
+    <a href="/index.html">
+        <img src="/uploads/icons/manamei-11.png" alt="Mana Mei">
+    </a>
+
     <!-- Mobile Menu (Small Devices & Smaller) -->
     {% include mobile-nav.html %}
 
