--- a/_includes/site-footer.html
+++ b/_includes/site-footer.html
@@ -1,23 +1,28 @@
-<footer class="p-5p">
-    <div class="grid sm:grid-cols-5 gap-4">
-        <div class="sm:col-span-2">
-            <span class="text-sm-serif block text-feature">Mana Mei</span>
-            <h2>Offerings</h2>
-            <nav>
-                {% for item in site.data.site-settings.navigation-footer %}
-                <a href="{{item.url}}" class="block mb-2">{{item.title}}</a>
-                {% endfor %}
-            </nav>
-        </div>
+<footer>
+    <div class="pt-5p pb-[2.5%] px-5p">
+        <div class="grid sm:grid-cols-5 gap-4">
+            <div class="sm:col-span-2">
+                <span class="text-sm-serif block text-feature">Mana Mei</span>
+                <h2>Offerings</h2>
+                <nav>
+                    {% for item in site.data.site-settings.navigation-footer %}
+                    <a href="{{item.url}}" class="block mb-2">{{item.title}}</a>
+                    {% endfor %}
+                </nav>
+            </div>
 
-        <div class="sm:col-span-3">
-            <h2 class="md:text-right mt-8 sm:mt-0">Contact</h2>
-            {% include form-contact.html %}
+            <div class="sm:col-span-3">
+                <h2 class="md:text-right mt-8 sm:mt-0">Contact</h2>
+                {% include form-contact.html %}
+            </div>
+        </div>
+        <div class="flex justify-center">
+            <a href="https://www.instagram.com/manamei_movement/" target="_blank"><img src="/uploads/icons/manamei-9.png" class="social-icon"></a>
+            <a href="https://www.facebook.com/groups/liberationthroughmovement" target="_blank"><img src="/uploads/icons/manamei-4.png" class="social-icon"></a>
+            <a href="https://www.youtube.com/@ManaMei" target="_blank"><img src="/uploads/icons/manamei-22.png" class="social-icon"></a>
         </div>
     </div>
-    <div class="flex justify-center">
-        <a href="https://www.instagram.com/manamei_movement/" target="_blank"><img src="/uploads/icons/manamei-9.png" class="social-icon"></a>
-        <a href="https://www.facebook.com/groups/liberationthroughmovement" target="_blank"><img src="/uploads/icons/manamei-4.png" class="social-icon"></a>
-        <a href="https://www.youtube.com/@ManaMei" target="_blank"><img src="/uploads/icons/manamei-22.png" class="social-icon"></a>
+    <div class="p-2 border-t-[0.5px] border-feature">
+        <p class="text-center text-[0.9rem]">Crafted & Developed by <a href="https://embodiedcreativeagency.com" target="_blank">Embodied Creative</a></p>
     </div>
 </footer>
